--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
         <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 
           <div class="col-md-12 ftco-animate text-center">
-            <h1 class="mb-2">박신율임돠. &amp; T3 FIGHTING</h1>
+            <h1 class="mb-2">602 번째 찐 최종 마지막 마무리 ㄹㅇ 끝내기 수정. &amp; 제발</h1>
             <h2 class="subheading mb-4">We deliver organic vegetables &amp; fruits</h2>
             <p><a href="#" class="btn btn-primary">View Details</a></p>
           </div>
